--- a/trunk/src/build.conf
+++ b/trunk/src/build.conf
@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Fri Oct 26 14:12:39 CEST 2007
-build.number=44
+#Wed Nov 21 14:36:10 CET 2007
+build.number=56
